--- a/PersonalProjectBlocksAPI.csproj
+++ b/PersonalProjectBlocksAPI.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dto%27s\" />
+  </ItemGroup>
+
 </Project>
