--- a/PersonalProjectBlocksAPI.WebApi.test/PersonalProjectBlocksAPI.test.csproj
+++ b/PersonalProjectBlocksAPI.WebApi.test/PersonalProjectBlocksAPI.test.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PersonalProjectBlocksAPI.WebApi\PersonalProjectBlocksAPI.csproj" />
+    <ProjectReference Include="..\PersonalProjectBlocksAPI\PersonalProjectBlocksAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
